# rosemi_beats

godot/: ControlsData.gd  ControlsData.gd.uid  controls_manager.gd  controls_manager.gd.uid  debug.gd  debug.gd.uid  default_bus_layout.tres  display_cell.tscn  export_presets.cfg  fail_note.tscn  icon.svg.import  main.tscn  new_rich_text_effect.tres  note.tscn  project.godot  rust.gdextension  rust.gdextension.uid  song_select_group.tres  start_menu.tscn  window_anim.gd  window_anim.gd.uid
godot/Assets/: anju.png.import  attack_left.png.import  attack_left.png.kra  attack_left_up.png.import  attack_left_up.png.kra  attack_right.png.import  attack_right.png.kra  (+31 more)
rust/: Cargo.toml
rust/src/: difficulty_button.rs  fail_note.rs  lib.rs  loader.rs  node_spawner.rs  note.rs  note_animation.rs  scene_root.rs  scorer.rs  song_cell.rs  song_display_screen.rs  song_load_screen.rs  spawn_zone.rs  step_converter.rs
rust/src/libs/: mod.rs  spritelib.rs
rust/src/nodes/: mod.rs  node_spawner.rs  scene_root.rs  scorer.rs
rust/src/objects/: game_object.rs  mod.rs  note.rs  player.rs
rust/src/res/: 12_days.sm  VITAMIN_SUMMER.sm  black_out.sm  ending.sm  its_showtime.sm  konton_boogie.sm  kyoufuu_all_back.old.sm  marchen_debut.sm  my_last_stand.sm  ringo_mogire_beam.sm  theme.old.sm  theme.sm
rust/src/save/: storage.rs
rust/src/ui/: control_menu.rs  countdown.rs  difficulty_button.rs  finish_menu.rs  hold_line.rs  mod.rs  remap_button.rs  song_cell.rs  song_display_screen.rs  song_load_screen.rs  spawn_zone.rs  ui_toggle_button.rs
rust/src/ui/animations/: mod.rs
(+63 files in other folders)
